--- a/rc-zip/Cargo.toml
+++ b/rc-zip/Cargo.toml
@@ -18,7 +18,7 @@ path = "src/lib.rs"
 [dependencies]
 winnow = "0.5.36"
 oval = "2.0.0"
-chrono = "0.4.33"
+chrono = { version = "0.4.33", features = ["serde"] }
 encoding_rs = "0.8.33"
 tracing = "0.1.40"
 oem_cp = "2.0.0"
@@ -36,6 +36,7 @@ temp-dir = { version = "0.1.12", optional = true }
 tracing-subscriber = { version = "0.3.18", optional = true, features = [
     "env-filter",
 ] }
+serde = { version = "1.0.217", features = ["derive"] }
 
 [features]
 corpus = ["dep:temp-dir", "dep:bzip2", "dep:tracing-subscriber"]
