--- a/ziplinter/Cargo.toml
+++ b/ziplinter/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 rc-zip-sync = { path = "../rc-zip-sync" }
 rc-zip = { path = "../rc-zip" }
 serde_json = "1.0.137"
+
+[dev-dependencies]
+insta = { version = "1.42.1", features = ["json"] }
